# 2D_Irregular_Packing

./: CMakeLists.txt  README.md  dataloader.cpp  dataloader.h  datawriter.cpp  datawriter.h  geometry.cpp  geometry.h  ilsqn.cpp  ilsqn.h  lbfgs.hpp  main.cpp  nofitpolygon.cpp  nofitpolygon.h  packing.cpp  packing.h  parameters.cpp  parameters.h  piece.cpp  piece.h  result.csv  vector.cpp  vector.h
data/: Albano.txt  Blaz.txt  Dagli.txt  Dighe1.txt  Dighe2.txt  Fu.txt  Han.txt  Jakobs1.txt  Jakobs2.txt  Mao.txt  Marques.txt  Shapes1.txt  Shirts.txt  Swim.txt  Trousers.txt  ntx.txt
ifpsCache/: Albano.csv  Blaz.csv  Dagli.csv  Dighe1.csv  Dighe2.csv  Fu.csv  Jakobs1.csv  Jakobs2.csv  Mao.csv  Marques.csv  Shapes0.csv  Shapes1.csv  Shirts.csv  Swim.csv  Trousers.csv  ntx.csv
include/: clipper.cpp  clipper.hpp
libnfporb-master/src/: geometry.hpp  history.hpp  libnfporb.hpp  svg.hpp  translation_vector.hpp  wkt.hpp
libnfporb-master/src/algo/: find_feasible.hpp  search_start.hpp  select_next.hpp  slide.hpp  touching_point.hpp  trim_vector.hpp
nfpsCache/: Albano.csv  Blaz.csv  Dagli.csv  Dighe1.csv  Dighe2.csv  Fu.csv  Jakobs1.csv  Jakobs2.csv  Mao.csv  Marques.csv  Shapes0.csv  Shapes1.csv  Shirts.csv  Swim.csv  Trousers.csv
parameters/: Albano.txt  Blaz.txt  Dagli.txt  Dighe1.txt  Dighe2.txt  Fu.txt  Jakobs1.txt  Jakobs2.txt  Mao.txt  Marques.txt  Shapes0.txt  Shapes1.txt  Shirts.txt  Swim.txt  Trousers.txt  ntx.txt
